tests/baselines/reference/reversedRecusiveTypeInstantiation.errors.txt
reversedRecusiveTypeInstantiation.ts(8,1): error TS2454: Variable 'a' is used before being assigned.


==== reversedRecusiveTypeInstantiation.ts (1 errors) ====
    interface A<StringArgPos1, NumberArgPos2> {
       xPos1 : StringArgPos1
       yPos2 : NumberArgPos2
       zPos2Pos1 : A<NumberArgPos2, StringArgPos1>
    }
    
    var a : A<string, number>
    a.zPos2Pos1.xPos1 = 1
    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    